fix nav on mobile

--- a/themes/aframe/source/css/examples.styl
+++ b/themes/aframe/source/css/examples.styl
@@ -274,11 +274,21 @@ h3 + .examples-subnav
         top 20px
 
     .main
-        height auto
         flex-direction column
+        justify-content space-between
 
     .example__iframe
-        height calc(100vh - 150px)
+        height 100%
+
+    .content
+        background green
+
+    .content--body
+        position absolute
+        bottom 0
+        left 0
+        top 0
+        right 0
 
     .sidebar,
     .sidebar__wrap
